--- a/web_app/src/styles.css
+++ b/web_app/src/styles.css
@@ -35,24 +35,33 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 5rem;           /* h-20 = 5rem */
+  height: 5rem;
   z-index: 49;
-  padding-left: 0.5rem;   /* px-2 = 0.5rem */
+  padding-left: 0.5rem;
   padding-right: 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-right: 1.5rem;
+}
+
 .nav-item {
-    padding: 0 12px 0 26px;
+    width: 32px;
     height: 32px;
     display: flex;
     align-items: center;
+    justify-content: center;
     border-radius: 50%;
     color: var(--text-color);
     font-size: 14px;
     cursor: pointer;
+    padding: 0;
 }
 
 .nav-item:hover {
@@ -62,6 +71,28 @@ body {
 .nav-item.active {
     background-color: var(--shadow-color);
     font-weight: 500;
+}
+
+.search-bar {
+    width: 300px;
+    height: 32px;
+    border-radius: 16px;
+    background-color: var(--shadow-color);
+    display: flex;
+    align-items: center;
+    padding-left: 12px;
+}
+
+.search-bar input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    color: var(--text-color);
+    font-size: 14px;
+}
+.search-bar input:focus {
+    outline: none;
 }
 
 .logo {
@@ -80,6 +111,7 @@ body {
     padding: 0 12px 0 26px;
     height: 32px;
     display: flex;
+    gap: 8px;
     align-items: center;
     border-radius: 0 16px 16px 0;
     color: var(--text-color);
