--- a/web_app/src/styles.css
+++ b/web_app/src/styles.css
@@ -1259,7 +1259,7 @@ body {
 
 .side-item.label-item {
     position: relative;
-    gap: 50px !important;
+    gap: 15px;
 }
 
 .side-item.label-item:hover .label-menu-btn {
@@ -1273,6 +1273,7 @@ body {
     white-space: nowrap;
     margin: 0 !important;
     padding: 0 !important;
+    text-align: left;
 }
 
 .label-menu-btn {
