--- a/android_app/app/src/main/res/values/colors.xml
+++ b/android_app/app/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
     <!-- Mail item colors - Light mode -->
     <color name="mail_background">#FFFFFF</color>
     <color name="mail_divider">#F0F0F0</color>
+    <color name="mail_unread_text">#000000</color>
+    <color name="mail_unread_subject">#000000</color>
+    <color name="mail_preview_text">#757575</color>
+    <color name="mail_read_all">#757575</color>
 </resources>
